force-app/main/default/objects/Nota_Fiscal__c/Nota_Fiscal__c.object-meta.xml
<CustomObject>
    <label>Nota Fiscal</label>
    <nameField>
        <displayFormat>NF-{0000}</displayFormat>
        <label>Código da NF</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notas Fiscais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>