force-app/main/default/objects/Nota_Fiscal__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <label>Cliente</label>
    <length>20</length>
    <type>Text</type>
</CustomField>