force-app/main/default/objects/Nota_Fiscal__c/fields/Data_aprovacao__c.field-meta.xml
<CustomField>
    <fullName>Data_aprovacao__c</fullName>
    <defaultValue>DATETIMEVALUE(Now())</defaultValue>
    <label>Data de aprovação do pedido</label>
    <type>DateTime</type>
</CustomField>