force-app/main/default/objects/Nota_Fiscal__c/fields/Data_do_pedido__c.field-meta.xml
<CustomField>
    <fullName>Data_do_pedido__c</fullName>
    <label>Data do pedido</label>
    <length>20</length>
    <type>Text</type>
</CustomField>