force-app/main/default/objects/Nota_Fiscal__c/fields/Email_do_cliente__c.field-meta.xml
<CustomField>
    <fullName>Email_do_cliente__c</fullName>
    <label>Email do cliente</label>
    <required>true</required>
    <type>Email</type>
</CustomField>