force-app/main/default/objects/Nota_Fiscal__c/fields/Logradouro__c.field-meta.xml
<CustomField>
    <fullName>Logradouro__c</fullName>
    <label>Logradouro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>