force-app/main/default/objects/Nota_Fiscal__c/fields/Mercadoria__c.field-meta.xml
<CustomField>
    <fullName>Mercadoria__c</fullName>
    <label>Mercadoria</label>
    <length>100</length>
    <type>Text</type>
</CustomField>