force-app/main/default/objects/Nota_Fiscal__c/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <label>Número</label>
    <length>10</length>
    <type>Text</type>
</CustomField>