force-app/main/default/objects/Nota_Fiscal__c/fields/Ordem_de_venda__c.field-meta.xml
<CustomField>
    <fullName>Ordem_de_venda__c</fullName>
    <label>Ordem de venda</label>
    <length>20</length>
    <type>Text</type>
</CustomField>