force-app/main/default/objects/Nota_Fiscal__c/fields/Valor_Total__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total__c</fullName>
    <label>Valor Total</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>