force-app/main/default/objects/Nota_Fiscal__c/fields/Valor_Unitario__c.field-meta.xml
<CustomField>
    <fullName>Valor_Unitario__c</fullName>
    <label>Valor Unitario</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>